# hometax-agent-client

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  drift.md  feature.md
.github/workflows/: release.yml
docs/: architecture.md  cert-login-reference.md  compatibility.md  conventions.md  extending.md  hometax-facts.md  recon.md  sessions.md
examples/: README.md  auth_idpw.py  auth_kakao.py  auth_kakao_guest.py  auth_naver.py  basic_inquiry.py  filing_help_pdf.py  income_tax_inquiry.py  inspect_har.py  recon_e2e_naver.py  recon_login.py  recon_protect.py
examples/web-sample/: README.md  index.html  preview.py  server.py
hometax_client/: __init__.py  client.py  constants.py  crypto.py  exceptions.py  health.py  models.py  sessions.py
hometax_client/auth/: __init__.py  idpw.py  kakao.py  naver.py  oacx.py
hometax_client/bootstrap/: __init__.py  capture.py  har.py
hometax_client/facts/: __init__.py  current.toml
hometax_client/services/: __init__.py  _base.py  _clipreport.py  income_tax.py  inquiries.py
tests/: test_capture_chmod.py  test_client_export_storage.py  test_clipreport.py  test_cookie_domain.py  test_crypto.py  test_drift.py  test_exceptions.py  test_facts.py  test_har.py  test_idpw_encoding.py  test_idpw_responses.py  test_keys_live.py  test_models.py  test_oacx_guest.py  test_oacx_retry.py  test_sessions.py  test_wq_action.py
tests/fixtures/: README.md
tests/fixtures/2026-05-10/: common_te-min_excerpt.js  pubclogin_step1_rrn_required.txt  pubclogin_step2_success.txt  r07_validate_success.json  session_info_idpw.json
