[project]
name = "hometax-agent-client"
version = "0.1.0a1"
description = "Capture-and-replay HomeTax HTTP client designed for AI agents and developers (unofficial)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Rey", email = "jmy1330@gmail.com" },
]
keywords = ["hometax", "korea", "tax", "agent", "automation", "nts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Korean",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
# Browser-based session bootstrap. Use only when ID/PW POST is blocked by
# the 2026-05 pubcLogin protection script and you need to seed a cookie jar.
bootstrap = ["playwright>=1.59.0"]
# Test dependencies.
test = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/myjung/hometax-agent-client"
Repository = "https://github.com/myjung/hometax-agent-client"
Issues = "https://github.com/myjung/hometax-agent-client/issues"
Documentation = "https://github.com/myjung/hometax-agent-client/tree/master/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hometax_client"]

[tool.hatch.build.targets.wheel.shared-data]
"hometax_client/facts" = "hometax_client/facts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pycodestyle]
max-line-length = 120
